Fixed spelling/mistakes in a few logs and started on Necrons

--- a/lists/Chaos/alphalegion.log.html
+++ b/lists/Chaos/alphalegion.log.html
@@ -1,15 +1,29 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Alpha Legion list can be seen as a counterpart to the Raven Guard loyalist list, in that it has many small and fragile formations, as well as a great deal of strategic flexibiliy. There are many ways of interpreting the Alpha Legion's very obscure fluff, some being closer to chaos, others basically loyalist double agents. This list has as its base the relatively uncorrupted 30k Alpha Legion, but with the option of making the list more chaotic. Daemons, cultists and Daemon Princes are available for those that want it, but it is perfectly possible to play without as well.
+    The EA:Ragnarök Alpha Legion list can be seen as a counterpart to the Raven Guard loyalist list, in that it has many
+    small and fragile formations, as well as a great deal of strategic flexibiliy. There are many ways of interpreting
+    the Alpha Legion's very obscure fluff, some being closer to chaos, others basically loyalist double agents. This
+    list has as its base the relatively uncorrupted 30k Alpha Legion, but with the option of making the list more
+    chaotic. Daemons, cultists and Daemon Princes are available for those that want it, but it is perfectly possible to
+    play without as well.
 
-    Since the EA:Ragnarök Alpha Legion isn't really based on any other list, this section will examine some highlights in how it differs from other Chaos Space Marine lists.
+    Since the EA:Ragnarök Alpha Legion isn't really based on any other list, this section will examine some highlights
+    in how it differs from other Chaos Space Marine lists.
 </p>
 <p>
-    Anti-Air: With no really good 30k Anti-Air unit to pick from, the AA aspect of the list is instead performed by the Imperial Guard Hydra. This also fits the list well because the Hydra is of course the Alpha Legion symbol. To
+    Anti-Air: With no really good 30k Anti-Air unit to pick from, the AA aspect of the list is instead performed by the
+    Imperial Guard Hydra. This also fits the list well because the Hydra is of course the Alpha Legion symbol.
 </p>
 <p>
-    Alpha Legion Transports: To reinforce the theme that the Alpha Legion is very close to loyalist Space Marines (and to compensate for the relative lack of daemons and heavy CSM formations) the Alpha Legion has the equivalent to the Space Marine Transports rule, has access to Air Assault transport, and has Drop Pods instead of Dreadclaws. This makes the Alpha Legion Terminators perhaps the most flexible in the game, since they can choose between deploying in Drop Pods or Teleporting.
+    Alpha Legion Transports: To reinforce the theme that the Alpha Legion is very close to loyalist Space Marines (and
+    to compensate for the relative lack of daemons and heavy CSM formations) the Alpha Legion has the equivalent to the
+    Space Marine Transports rule, has access to Air Assault transport, and has Drop Pods instead of Dreadclaws. This
+    makes the Alpha Legion Terminators perhaps the most flexible in the game, since they can choose between deploying in
+    Drop Pods or Teleporting.
 </p>
 <p>
-    Stubborn and The Harrowing: To give the small and very fragile Alpha Legion formations a better chance of staying unbroken, they were given the Stubborn rule, which under most circumstances is an inferior version of the Space Marines' "ATSKNF" rule. The Harrowing is another compromise between giving the list 5 in Strategy Rating, and the 4 in Strategy Rating that other Chaos Space Marine lists have.
+    Stubborn and The Harrowing: To give the small and very fragile Alpha Legion formations a better chance of staying
+    unbroken, they were given the Stubborn rule, which under most circumstances is an inferior version of the Space
+    Marines' "ATSKNF" rule. The Harrowing is another compromise between giving the list 5 in Strategy Rating, and the 4
+    in Strategy Rating that other Chaos Space Marine lists have.
 </p>
