--- a/lists/Chaos/worldeaters.log.html
+++ b/lists/Chaos/worldeaters.log.html
@@ -1,12 +1,20 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök World Eaters list is mainly based on the E-UK version, but has no access to Titans, instead orienting it towards the great selection of Khorne Daemon engines that exists in 40k.
+    The EA:Ragnarök World Eaters list is mainly based on the E-UK version, but has no access to Titans, instead
+    orienting it towards the great selection of Khorne Daemon engines that exists in 40k.
 </p>
 <p>
-    Split Retinues: In the E-UK version of the list, the basic retinue could be very powerful if many formations were taken, as Khorne Berzerkers were comparatively cheap for their size, and very hard to get rid of since the entire formation was fearless. The introduction Chaos Assault Marines retains the very aggressive playstyle of these formations while making them more vulnerable to losing Engages and giving retinues some shooting.
+    Split Retinues: In the E-UK version of the list, the basic retinue could be very powerful if many formations were
+    taken, as Khorne Berzerkers were comparatively cheap for their size, and very hard to get rid of since the entire
+    formation was fearless. The introduction Chaos Assault Marines retains the very aggressive playstyle of these
+    formations while making them more vulnerable to losing Engages and giving retinues some shooting.
 </p>
 <p>
-    Juggernauts and Bloodcrushers: In order to make a greater difference between Juggernauts and Bikes, and to enable the introduction of Bloodcrushers, Juggernaut riders now have better armour, better speed but no infiltrate, these formations must now get closer to the enemy than before. Bloodcrushers gives the list access to exceptionally hard Daemons that can keep pace with other Juggernauts. These changes were also made to enable the Daemonic Incursion list to work better.
+    Juggernauts and Bloodcrushers: In order to make a greater difference between Juggernauts and Bikes, and to enable
+    the introduction of Bloodcrushers, Juggernaut riders now have better armour, better speed but no infiltrate, these
+    formations must now get closer to the enemy than before. Bloodcrushers gives the list access to exceptionally hard
+    Daemons that can keep pace with other Juggernauts. These changes were also made to enable the Daemonic Incursion
+    list to work better.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
@@ -17,11 +25,12 @@
     <li>Chaos Destroyers with Jump Packs introduced as a World Eater's alternative to Raptors.</li>
     <li>Berzerker Bikes slightly cheaper, and two units fewer in the formation.</li>
     <li>Fleshhounds gets 35cm speed to enable them to keep pace with the Berzerker Bikes.</li>
-    <li>Chaos Spartan Assault Tank with the H-AV rule introduced as a transport option for Retinues and Terminators.</li>
+    <li>Chaos Spartan Assault Tank with the H-AV rule introduced as a transport option for Retinues and Terminators.
+    </li>
     <li>Cannons of Khorne formation slightly more expensive, as this was a very powerful choice.</li>
     <li>Daemonic Assault Engines cheaper and faster, but with worse armour and no shooting.</li>
     <li>Doomblaster introduced as a powerful garrison and an alternative to the Cannon of Khorne.</li>
     <li>Greater Brass Scorpion introduced as a 3 DC War Engine.</li>
-    <li>Tower of Skulls, a 6 DC War Engine with powerful shooting and Regeneration (5+ Invulnerable Save) introduced.</li>
-    <li>The Styx Class Battlecruiser replaced with the ordinary Chaos Navy options.</li>
+    <li>Tower of Skulls, a 6 DC War Engine with powerful shooting and Regeneration (5+ Invulnerable Save) introduced.
+    </li>
 </ul>
