--- a/lists/SQ/squats.log.html
+++ b/lists/SQ/squats.log.html
@@ -1,39 +1,60 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Wodanaz Stronghold list is based on the E-UK Squats list. The lists are mostly the same, but with a few important changes to force strucure, stats and additional units.
+    The EA:Ragnarök Wodanaz Stronghold list is based on the E-UK Squats list. The lists are mostly the same, but with a
+    few important changes to force strucure, stats and additional units.
 </p>
 <p>
-    Squat Warriors: Mostly unchanged, but can ride in a Leviathan War Engine, which is the only way to take this War Engine in the list. This also makes the 33% section more interesting.
+    Squat Warriors: Mostly unchanged, but can ride in a Leviathan War Engine, which is the only way to take this War
+    Engine in the list. This also makes the 33% section more interesting.
 </p>
 <p>
-    Squat Berserkers: This unit felt slightly too strong in FF when compared to the Warriors and have had their FF reduced to 6+. In exchange they have free Rhinos and can be transported in Termites.
+    Squat Berserkers: This unit felt slightly too strong in FF when compared to the Warriors and have had their FF
+    reduced to 6+. In exchange they have free Rhinos and can be transported in Termites.
 </p>
 <p>
-    Termites and Hellbores: Termites are no longer just markers, but a transport vehicle that pops up on the board, making them more attractive when compared to the Rhino. The Hellbore is now a separate formation, no longer forcing its cargo to stay put after disembarking. The Hellbore also have slightly different stats.
+    Termites and Hellbores: Termites are no longer just markers, but a transport vehicle that pops up on the board,
+    making them more attractive when compared to the Rhino. The Hellbore is now a separate formation, no longer forcing
+    its cargo to stay put after disembarking. The Hellbore also have slightly different stats.
 </p>
 <p>
-    Ragnarok Battle Cannons: Given the Viking-theme of the 40k Squats, and that this is EA: Ragnarök, all Battle Cannons in the list have been replaced with Ragnarok Battle Cannons. This also gives a slight but needed nerf to the Overlord and the Gyrokopter units.
+    Ragnarok Battle Cannons: Given the Viking-theme of the 40k Squats, and that this is EA: Ragnarök, all Battle Cannons
+    in the list have been replaced with Ragnarok Battle Cannons. This also gives a slight but needed nerf to the
+    Overlord and the Gyrokopter units.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>Since Squat core formations are fairly cheap, the number of support formations for each core formation has been reduced to 2.</li>
+    <li>Since Squat core formations are fairly cheap, the number of support formations for each core formation has been
+        reduced to 2.
+    </li>
 </ul>
 <ul>
-    <li>Squat Thunderfires have slightly worse stats, and have been given 5cm speed to prevent the formation form garrisoning when paired with Rhinos. While transporting Squat Thunderfires, Rhinos only have 20cm speed. It is possible to take Squat Thunderfires on their own for a reduced cost.</li>
+    <li>Squat Thunderfires have slightly worse stats, and have been given 5cm speed to prevent the formation form
+        garrisoning when paired with Rhinos. While transporting Squat Thunderfires, Rhinos only have 20cm speed. It is
+        possible to take Squat Thunderfires on their own for a reduced cost.
+    </li>
 </ul>
 <ul>
-    <li>Kastelans inherits the changes to Machine Spirit made in other lists, and are now their own formation, chaperoned by a Squat Tech Priest unit. The Tarantulas are also Machine Spirits, and have been combined with the Rapiers.</li>
+    <li>Kastelans inherits the changes to Machine Spirit made in other lists, and are now their own formation,
+        chaperoned by a Squat Tech Priest unit. The Tarantulas are also Machine Spirits, and have been combined with the
+        Rapiers.
+    </li>
 </ul>
 <ul>
     <li>Thunderers have slightly different stats, and can ride in Land Raiders.</li>
 </ul>
 <ul>
-    <li>The Overlord, being a very nasty War Engine, has been moved from the support section to the 33% section, and have different stats; worse save, but slightly faster.</li>
+    <li>The Overlord, being a very nasty War Engine, has been moved from the support section to the 33% section, and
+        have different stats; worse save, but slightly faster.
+    </li>
 </ul>
 <ul>
-    <li>The Goliath Battery is quite resilient, and can feel extreme against certain types of lists, and had its point cost raised, but with better armour. </li>
+    <li>The Goliath Battery is quite resilient, and can feel extreme against certain types of lists, and had its point
+        cost raised, but with better armour.
+    </li>
 </ul>
 <ul>
-    <li>The Land Train has been given better speed to make it more relevant when compared to other War Engines in the 33% section. It also has different stats on the Cars.</li>
+    <li>The Land Train has been given better speed to make it more relevant when compared to other War Engines in the
+        33% section. It also has different stats on the Cars.
+    </li>
 </ul>
