Changed the scenarios page, and fixed various minor things in other texts

--- a/content/online.html
+++ b/content/online.html
@@ -1,4 +1,9 @@
 <h2>Online Gaming</h2>
+<p class="lead">
+    With epic being out of production for many years now, the Epic community i small and spread across the globe. Online
+    games is a great complement to the real thing, and a way to play opponents that you could not normally play due to
+    geographical distance.
+</p>
 <p>
     There are two main options for playing Epic Armageddon online, Tabletop Simulator (which is 3d) and Vassal (which is
     2d). Each has their advantages, but the former was used in the development of Epic Armageddon Ragnarök, and benefits
@@ -35,7 +40,7 @@
     Some scripts has been added to the table to help the gameplay. The scripting buttons (defaults to numpad 0-9) can be
     used to draw ranges from your models. Select the model(s) you want to draw ranges around; 1=5cm, 2=10cm, 3=15cm,
     4=20cm, 5=30cm, 6=45cm, 7=60cm, 8=75cm. The 9 draws a 15cm circle from the <b>center</b> of the selected item, which
-    is typically used to measure distance to objectives. The 0 removes any previous ranges.
+    is typically used to measure distance to objectives. The 0 removes any previously drawn ranges.
 </p>
 <p>
     The barrage templates, as well as the "scripted Tunneler/Drop Pod location" marker has functionality to record a
