--- a/content/rules.html
+++ b/content/rules.html
@@ -42,11 +42,11 @@
 
 <h6>Contacting more than one enemy unit during an engage</h6>
 <p>
-    A gray zone in the rules is under what conditions a unit can contact more than one unit when it engages. While units
-    must move towards enemy units once they enter their zone of control is clear, but less clear is how creative with
-    angling your models in the phase you can be. Our suggestion is to be liberal in interpreting this, and that engaging
-    or counter charging units can always contact up to two enemy units if they have enough speed to do so, and there is
-    enough physical space to fit.
+    A gray zone in the rules is under what conditions a unit can touch more than one enemy unit when it engages. While
+    units must move towards enemy units once they enter their zone of control is clear, but less clear is how creative
+    with angling your models in the phase you can be. Our suggestion is to be liberal in interpreting this, and that
+    engaging or counter charging units can always contact up to two enemy units if they have enough speed to do so, and
+    there is enough physical space to fit.
 </p>
 
 <!--
