--- a/content/scenarios.html
+++ b/content/scenarios.html
@@ -1,6 +1,10 @@
 <h2>Scenarios</h2>
-<p class="lead">The EA:Ragnarök tournament game rules are designed to be used in conjunction with the EA:Ragnarök army lists.
-    They will allow two players to fight an evenly balanced battle with little or no preparation.</p>
+<p class="lead">
+    The EA:Ragnarök tournament game rules are designed to be used in conjunction with the EA:Ragnarök army lists.
+    They will allow two players to fight an evenly balanced battle with little or no preparation.
+</p>
+
+<!--
 <div class="container">
     <div class="row">
         <div class="col-lg-4 d-none d-lg-block">&nbsp</div>
@@ -10,6 +14,8 @@
                      src="images/Scenario_Battle.jpg"/>
                 Battle Line
             </a>
+            <p>The EA:Ragnarök tournament game rules are designed to be used in conjunction with the EA:Ragnarök army
+                lists. They will allow two players to fight an evenly balanced battle with little or no preparation.</p>
         </div>
         <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
             <a href="content/scenarios/fire.html">
@@ -20,16 +26,40 @@
                 <i>beta</i>
             </a>
         </div>
-        <!--
-        <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
-            <a href="content/scenarios/fog.html">
-                <img class="img-responsive 	d-none d-sm-block" style="width:100%"
-                     src="images/Scenario_Fog.jpg"/>
-                Fog of War
+    </div>
+</div>
+-->
+
+<div class="container">
+    <div class="row" style="margin-top: 15px">
+        <div class="col-lg-2 d-none d-lg-block">&nbsp</div>
+        <div class="col-sm-4 col-lg-2 text-center">
+            <a href="content/scenarios/battleline.html">
+                <img class="img-responsive" style="width:100%" src="images/Scenario_Battle.jpg"/>
+                Battle Line
+            </a>
+        </div>
+        <div class="col-sm-8 col-lg-6 my-auto">
+            The <b>Battle Line</b> scenario is based on the scenario described in the NetEA Epic Tournament Game Rules.
+            We have done a few tweaks which we hope will improve the scenario and pose some new challenges in a well
+            known context.
+        </div>
+    </div>
+    <div class="row" style="margin-top: 15px">
+        <div class="col-lg-2 d-none d-lg-block">&nbsp</div>
+        <div class="col-sm-4 col-lg-2 text-center">
+            <a href="content/scenarios/fire.html">
+                <img class="img-responsive" style="width:100%" src="images/Scenario_Beacons.jpg"/>
+                Fire the Beacons
                 <br class="d-none d-sm-inline">
                 <i>beta</i>
             </a>
         </div>
-        -->
+        <div class="col-sm-8 col-lg-6 my-auto">
+            <b>Fire the Beacons</b> is a new scenario over three turns. While the rules and victory conditions are
+            familiar from the NetEA standard scenario, in Fire the Beacons you accumulate points from the first turn
+            onwards. We have used it a lot during play testing and really enjoyed the fact that it puts objectives in
+            focus already from turn one. We strongly suggest you try it out!
+        </div>
     </div>
 </div>
