--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -16,10 +16,12 @@
     place objective markers in terrain that is impassable for any unit type.</p>
 
 <p>Unlike in the normal Epic Tournament Scenario, objectives do have memory. Each objective starts the game in
-    possession of the player who's half it is.</p>
+    possession of the player who's half it is on.</p>
 
-<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it after each completed action by any formation. This includes units that have successfully rallied. Formations that are restricted to contesting
-    objectives may only prevent enemy formations from flipping objectives, while formations that can neither contest nor capture objectives can't cause or prevent the flipping of objectives.</p>
+<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it after each
+    completed action by any formation. This includes units that have successfully rallied. Formations that are
+    restricted to contesting objectives may only prevent enemy formations from flipping objectives, while formations
+    that can neither contest nor capture objectives can't cause or prevent the flipping of objectives.</p>
 
 <h4>Victory Conditions</h4>
 <p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
@@ -31,7 +33,8 @@
     same turn that it lands.
 </p>
 
-<p>The "Break Their Spirit" VC is worth 2 points once. The Blitz objective is worth 2 points each turn. All other objectives are worth 1 point each turn.
+<p>The "Break Their Spirit" VC is worth 2 points once. The Blitz objective is worth 2 points each turn. All other
+    objectives are worth 1 point each turn.
     These points accumulate from the first turn onwards.</p>
 
 <p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in any turn.</p>
