--- a/content/terrain.html
+++ b/content/terrain.html
@@ -56,10 +56,10 @@
 
 <p>
     <b>Roads</b>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard
-    movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on
-    a road at the start of their action, you may declare they will make a road move. The formation may attempt to do
-    an Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in
-    the formation must remain on the road during the entire action.
+    movement such as counter charges or consolidation movement). In addition, if all units in the formation are on
+    a road at the start of their action, you may declare they will make a road move. If the formation selects an
+    Advance, Double or March action they get +1 to the activation roll. However, all the units in the formation must
+    remain on the road during the entire action.
 </p>
 
 <p>
