--- a/content/intro.html
+++ b/content/intro.html
@@ -4,11 +4,11 @@
     Welcome to Epic Armageddon: Ragnarök. On these pages you will find fan based lists and scenarios for Epic Armageddon
     developed by the EA:Ragnarök team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group
     and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have
-    created a fresh new vibe on the game and we aim for some fun gaming sessions.
+    created a fresh new vibe on the game, and we aim for some fun gaming sessions.
 </p>
 
 <p>
-    These list are still in development but we feel we have reached a point where they are ready for a public beta.
+    These list are still in development, but we feel we have reached a point where they are ready for a public beta.
     We invite you to comment/bring ideas to the table through our Discord channel (link on the 'Online Gaming' page).
     With epic being out of production for many years now, our gaming friends are far and wide for us. We
     play a lot of games online and invite you to also join in online games through the discord channel. On the 'Online
@@ -18,8 +18,8 @@
 
 <h3>List Design</h3>
 <p>
-    We have done a few general changes across all Epic Armageddon: Ragnarök lists that we hope will
-    improve the game, and overall list design.
+    We have done a few general changes across all Epic Armageddon: Ragnarök lists that we hope will improve the game,
+    and overall list design.
 </p>
 
 <h4>Titans</h4>
