Blood Angels overhaul & removed Imperial Fists support battery formation

--- a/lists/SM/bloodangels.log.html
+++ b/lists/SM/bloodangels.log.html
@@ -1,12 +1,18 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Blood Angels list is inspired by the NetEA and EpicUK lists. The list is focused on engages while
+    The EA:Ragnarök Blood Angels list is inspired mainly by the NetEA list. The list is focused on engages while
     sacrificing long range shooting. It has a number of unique units and formations, including the iconic Death Company
-    and Sanguinary Guards. The Blood Angels chapter also has access to the Storm Raven air transport, which has the
-    ability to transport Dreadnoughts. The Storm Ravens opens up for some unique and powerful air-assault options, or
-    the option to pick up large formations including Dreadnoughts deployed via Drop Pods.
+    and Sanguinary Guards. The Blood Angels chapter also has access to the Stormraven transport, which has been designed
+    as a skimmer with the <i>planetfall</i> special ability. This opens up for a unique playstyle where you can drop
+    formations from space with very high mobility on the ground. To further cater to this style of play the Blood Angels
+    has been given access to a cheaper spaceship, the Vanguard Class Light Cruiser. As we wanted the Stormraven to be
+    the main "air-transport", even thou it is not a true aircraft, Blood Angels do not have access to Thunderhawks.
 </p>
 <p>
-    The Blood Angels list is well suited to an aggressive play-style with a mix of fast ground-based formations, space
-    and air insertions.
+    The Death Company is cheaper than in other lists, and has been designed to be the vanguard of the Blood Angels army.
+    They can not be transported. Instead, they either garrison ahead of the main force or gets inserted via Drop Pods.
+</p>
+<p>
+    The Blood Angels list is well suited to an aggressive play-style with a mix of fast ground-based formations and
+    space insertions. Make sure you close in on the enemy fast to compensate for the lack of long range firepower.
 </p>
