--- a/lists/O/O_race.log.html
+++ b/lists/O/O_race.log.html
@@ -1,7 +1,7 @@
 <h3>General Ork changes</h3>
 
 <p>
-    A new rule has been introduced for most Ork infantry and walkers: 'Ere we go. This new special rule gives the Orks
+    A new rule has been introduced for most Ork infantry and walkers: <i>'Ere we go</i>. This new special rule gives the Orks
     an extra 5cm movement when the formation performs an Engage action. The idea behind the rule is to make the Warband,
     which we feel should be the base for most ork armies, a more attractive option when field on the ground. Today most
     of the Warbands fielded are transported to the battlefield by Landas, which is a good option but should not be the
