--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -7,9 +7,21 @@
 </p>
 <p>
     The Ork infantry has been changed for the Snakebite list into primitive versions of their more advanced brothers,
-    with less advanced weaponry. The new transport has been introduced, the Gargantuan Squiggoth which is in between the
+    with less advanced weaponry. A new transport has been introduced, the Gargantuan Squiggoth which is in between the
     Squiggoth and the Orkeosaurus in size. The Orkeosaurus has received a significant reduction to its armor, but is now
-    faster. A maximum of two Steam Gargans can be taken per formation, and the critical hit effect has been changed, but
-    you can now have multiple formations of Steam Gargants in your army. A few new units has been introduced to give the
-    list access to some shooting, like the Lobbas and the Squiggoth Supa-Lobba.
+    faster. The transport creatures also received the <i>'Ere we go</i> special rule for another 5cm extra movement
+    during an assault. We want the Warbands to get into the fray faster, while at the same time not having an
+    indestructible ride to hide in while they get there.
+</p>
+<p>
+    The Steam Gargants has been changed a lot, and is no longer 0-1. They lost their anti-air attack and their
+    very frustrating critical hit effect. They now use the standard critical effect for Ork Gargants; they catch fire.
+    They use a shorter range version of the Soopagun and you can take a maximum of two Steam Gargants in a formation. We
+    hope this will make the Steam Gargants more fun to play, less frustrating to face. You might also have to look for
+    another formation to be your BTS, which was not the case in the Feral Ork list...
+</p>
+<p>
+    A few new units has been introduced to give the list access to some shooting, like the Lobbas and the Squiggoth
+    Supa-Lobba. Both units have indirect fire weapons which can be powerful, but require you to take a sustained fire
+    action which can be a challenge for the Orks.
 </p>
