Small ork fixes

--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -23,5 +23,5 @@
 <p>
     A few new units has been introduced to give the list access to some shooting, like the Lobbas and the Squiggoth
     Supa-Lobba. Both units have indirect fire weapons which can be powerful, but require you to take a sustained fire
-    action which can be a challenge for the Orks.
+    action which is a challenge for the Orks.
 </p>
