Polishing the about texts

--- a/lists/EL/iyanden.log.html
+++ b/lists/EL/iyanden.log.html
@@ -6,8 +6,9 @@
     drop to Wave Serpents transported wraith-formations are more viable.
 </p>
 <p>
-    The Iyanden list also has access to a new unit, the Wraith Knights. Eldar Wraith Knight are fast and have a 1+ with
-    various weapon options making them an interesting option for triggering engages with Guardians in support.
+    The Iyanden list also has access to a new unit, the Wraith Knights. Eldar Wraith Knight are fast and have an 1+
+    activation with various weapon options making them an interesting formation for triggering engages with other
+    formations in support.
 </p>
 <p>
     Iyanden has access to the Hemlock Wraithfighter, a fighter with a very powerful but short ranged air-to-ground
