--- a/lists/EL/ulthwe.log.html
+++ b/lists/EL/ulthwe.log.html
@@ -6,6 +6,7 @@
     the list in general more reliable.
 </p>
 <p>
-    The Ulthwe list also has access to a new unit, the Wraith Knights. Eldar Wraith Knight are fast and have a 1+ with
-    various weapon options making them an interesting option for triggering engages with Guardians in support.
+    The Ulthwe list also has access to a new unit, the Wraith Knights. Eldar Wraith Knight are fast and have a 1+
+    activation with various weapon options making them an interesting option for triggering engages with Guardians in
+    support.
 </p>
