--- a/lists/TAU/viorla.log.html
+++ b/lists/TAU/viorla.log.html
@@ -8,7 +8,13 @@
     does not have access to Orcas and thus can not use air insertions.
 </p>
 <p>
-    The list is meant to play as a ground based force with Crisis Suits, Broadsides, and Heavy Battle Suits as the damage dealers.
-    The larger suits can be deadly when shooting, especially when targeting enemy formations in marker lights, but are
-    weak in assaults due to high cost and low numbers. Make sure to protect and support them at all times!
+    The Heavy Battlesuits has been designed for different roles on the battlefield, but all with one common mindset.
+    They all have powerful shooting but with relatively low to-hit, meaning that you will have to use your marker lights
+    efficiently to maximize the shooting from the Battlesuits.
+</p>
+<p>
+    The list is meant to play as a ground based force with Crisis Suits, Broadsides, and Heavy Battle Suits as the
+    damage dealers. The larger suits can be deadly when shooting, especially when targeting enemy formations in marker
+    lights, but are weak in assaults due to high cost and low numbers. Make sure to protect and support them at all
+    times!
 </p>
