--- a/site.html
+++ b/site.html
@@ -44,7 +44,29 @@
     </ul>
 
     <div id="content"></div>
-    <p>&nbsp;</p>
+    <hr style="width: 80%; margin-top: 5rem">
+    <p style="text-align: center"><small style="color: #888888"><b>The content of this site is unofficial and in no way endorsed by Games Workshop Limited.</b></small></p>
+    <p style="text-align: center; line-height: 1;"><small style="color: #888888">
+        Adeptus Astartes, Battlefleet Gothic, Black Flame, Black Library, the Black Library logo, BL Publishing, Blood
+        Angels, Bloodquest, Blood Bowl, the Blood Bowl logo, The Blood Bowl Spike Device, Cadian, Catachan, the
+        Chaos device, Cityfight, the Chaos logo, Citadel, Citadel Device, City of the Damned, Codex,
+        Daemonhunters, Dark Angels, Dark Eldar, Dark Future, the Double-Headed/Imperial Eagle device, 'Eavy
+        Metal, Eldar, Eldar symbol devices, Epic, Eye of Terror, Fanatic, the Fanatic logo, the Fanatic II logo, Fire
+        Warrior, Forge World, Games Workshop, Games Workshop logo, Genestealer, Golden Demon,
+        Gorkamorka, Great Unclean One, the Hammer of Sigmar logo, Horned Rat logo, Inferno, Inquisitor, the
+        Inquisitor logo, the Inquisitor device, Inquisitor: Conspiracies, Keeper of Secrets, Khemri, Khorne, Kroot, Lord
+        of Change, Marauder, Mordheim, the Mordheim logo, Necromunda, Necromunda stencil logo, Necromunda
+        Plate logo, Necron, Nurgle, Ork, Ork skull devices, Sisters of Battle, Skaven, the Skaven symbol devices,
+        Slaanesh, Space Hulk, Space Marine, Space Marine chapters, Space Marine chapter logos, Talisman, Tau,
+        the Tau caste designations, Tomb Kings, Trio of Warriors, Twin Tailed Comet Logo, Tyranid, Tzeentch,
+        Ultramarines, Warhammer, Warhammer Historical, Warhammer Online, Warhammer 40k Device,
+        Warhammer World logo, Warmaster, White Dwarf, the White Dwarf logo, and all associated marks, names,
+        races, race insignia, characters, vehicles, locations, units, illustrations and images from the Blood Bowl
+        game, the Warhammer world, the Talisman world, and the Warhammer 40,000 universe are either ®, TM
+        and/or © Copyright Games Workshop Ltd 2000-2008, variably registered in the UK and other countries
+        around the world. Used without permission. No challenge to their status intended. All Rights Reserved to
+        their respective owners.
+    </small></p>
 </div>
 
 <script id="error-template" type="text/x-handlebars-template">
