Necron about update, and minor tweaks

--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -9,9 +9,9 @@
     The Ork infantry has been changed for the Snakebite list into primitive versions of their more advanced brothers,
     with less advanced weaponry. A new transport has been introduced, the Gargantuan Squiggoth which is in between the
     Squiggoth and the Orkeosaurus in size. The Orkeosaurus has received a significant reduction to its armor, but is now
-    faster. The transport creatures also received the <i>'Ere we go</i> special rule for another 5cm extra movement
-    during an assault. We want the Warbands to get into the fray faster, while at the same time not having an
-    indestructible ride to hide in while they get there.
+    faster. The Squiggoths also received the <i>'Ere we go</i> special rule for another 5cm extra movement during an
+    assault. We want the Warbands to get into the fray faster, while at the same time not having an indestructible ride
+    to hide in while they get there.
 </p>
 <p>
     The Steam Gargants has been changed a lot, and is no longer 0-1. They lost their anti-air attack and their
