--- a/content/intro.html
+++ b/content/intro.html
@@ -3,17 +3,17 @@
 <p class="lead">
     Welcome to Epic Armageddon: Ragnarök. On these pages you will find fan based lists and scenarios for Epic Armageddon
     developed by the EA:Ragnarök team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group
-    and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have
-    created a fresh new vibe on the game, and we aim for some fun gaming sessions.
+    and the F-ERC group. We have done this project because we really enjoy the game, scenario and list development. We
+    hope we have created a fresh new vibe on the game, and we aim for some fun gaming sessions.
 </p>
 
 <p>
     These list are still in development, but we feel we have reached a point where they are ready for a public beta.
     We invite you to comment/bring ideas to the table through our Discord channel (link on the 'Online Gaming' page).
     With epic being out of production for many years now, our gaming friends are far and wide for us. We
-    play a lot of games online and invite you to also join in online games through the discord channel. On the 'Online
-    Gaming' page you will find tutorials and links to play games via Tabletop Simulator. This software is available on
-    steam for a few dollars. Special thanks to 'Norto' for a ton of the initial work on this project.
+    play a lot of games online and invite you to also join in online games through the discord channel. On the
+    <i>Online Gaming</i> page you will find tutorials and links to play games via Tabletop Simulator. This software is
+    available on steam for a few dollars. Special thanks to 'Norto' for a ton of the initial work on this project.
 </p>
 
 <h3>List Design</h3>
