--- a/lists/NC/maynarkhdynasty.log.html
+++ b/lists/NC/maynarkhdynasty.log.html
@@ -1,24 +1,49 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Maynarkh Dynasty Necron list has undergone major changes compared to the NetEA and Epic UK lists. We
-    felt that the Necron list played too differently from all other Epic armies, and were breaking some of the most
-    basic rules for how armies behave in Epic. This is our attempt at bringing the Necron army closer to how other
-    armies work, while still keeping the unique way Necron works with their teleporting portals.
+    The Necrons has undergone major changes compared to the NetEA and Epic UK lists. We felt that the Necron list played
+    too differently from all other Epic armies, and were breaking some of the most basic rules for how armies behave in
+    Epic. This is our attempt at bringing the Necron army closer to how other armies work, while still keeping the
+    unique way Necron operate with their teleporting portals.
 </p>
 <p>
-    Most importantly we made all portals <i>enduring</i>, meaning that they do not phase out when broken. They are also
-    <i>ponderous</i> meaning that they may only make a single withdrawal move instead of two when becoming broken or
-    failing to rally. Formations using a broken portal will also receive a blast marker. These changes combined makes
-    the portals more predictable. The Necron player still has great flexibility when deploying his portals, but has to
-    think harder on where he wants them, as they are slow to reposition. When playing against the Necrons you now have
-    better control and chance to react as you, after the initial teleport, know roughly where the portals will operate.
-    And hopefully you will no longer end up in a wierd situation where you rather not break the opponents portals as
-    this will most likely cause them to reposition next turn. This also gives the Necron player a choice weather to
-    teleport all portals in turn one or so save a formation or two for later...
+    The <i>phase out</i> special rule has been changed radically. Formations no longer phase out when broken. Instead
+    they phase out when the formation lost half or more of its units. Once phased out the formation counts as destroyed
+    and will not return to the battle. This change has two important implications:
 </p>
+<ul>
+    <li>
+        The portals will become much more predictable. The Necron player still has great flexibility when deploying his
+        portals, but has to think harder on where he wants them, as they are slow to reposition. When playing against
+        the Necrons you now have better control and chance to react as you, after the initial teleport, know roughly
+        where the portals will operate. And hopefully you will no longer end up in a wierd situation where you rather
+        not break the opponents portals as this will most likely cause them to reposition next turn. This also gives the
+        Necron player a choice weather to teleport all portals in turn one or to save a formation for later turns...
+    </li>
+    <li>
+        The other aspect of the <i>phase out</i> rule is that, given this major weakness, we can design the Necrons as
+        the elite force of powerful units as it is described to be without having to make the formations too small or
+        too expensive. Necron formations will have to use a portal to move back into the reserve which also will be a
+        limiting factor for how the formations are used compared its predecessors. It will also be more in line with how
+        Epic works in general even thou moving back into reserve is a unique ability for the Necrons. With this design
+        we envision the Necron formations to be very powerful at the start of the game, but once they start taking
+        casualties you will have to be careful to avoid a formation <i>phase out</i>.
+    </li>
+</ul>
 <p>
     The basic Necron rules has also been changed. The regeneration/reanimation has been replaces by a 5+ invulnerable
     save to represent the Necrons abilities to repair themselves. We felt this simplifies gameplay as dead units will
-    always remain dead. Most Necron units also received the <i>Machine Spirit</i> and <i>Expendable</i> special rules
-    meaning that formations that lost their Lord will be significantly weaker.
+    always remain dead. Most Necron units also received the <i>Machine Spirit</i> and <i>Expendable</i> special rules to
+    represent their machine origin. While <i>Expendable</i> will make them very hard to break with shooting, the
+    <i>Machine Spirit</i> rule means that formations that lost their Lord will be significantly weaker.
+</p>
+<p>
+    The strategy rating of the Necrons has been changed to a 1 to represent their slow and steady advance. They also
+    received an army rule allowing them to re-roll failed teleport rolls. The intention is that you should arrive at the
+    battlefield in better shape, but you will have to be a bit more conservative with your teleports as your opponent
+    will most likely get a change to act before you do.
+</p>
+<p>
+    The Maynarkh Dynasty Necrons has received a new formation that can garrison from any objective; the Canoptec Swarm.
+    The Canoptec Swarm (A Canoptec Spyder and Scarabs) is a way to get presence on the battlefield from the first
+    activation, and can be useful holding ground or protecting teleporting portals.
 </p>
