--- a/lists/SM/ravenguard.log.html
+++ b/lists/SM/ravenguard.log.html
@@ -1,21 +1,27 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Raven Guard list is based on the NetEA version, but with major changes to many of the units.
-    Sternguard Veterans are no longer <i>Scout</i>s and has been redesigned into a firefight specialist unit, with <i>Sniper</i>
-    firefight. The Land Speeder Tempest no longer has anti-air capabilities, but instead has a decent anti-tank weapon.
-    The Storm Eagle is more expensive but now has 2DC. Both Sternguard and Vanguard formations has been given the
-    Eldar-inspired ability to move full speed during consolidation moves to represent the Raven Guard ability of moving
-    behind enemy lines with unrivalled stealth.
+    The EA:Ragnarök Raven Guard list is loosely based on the NetEA version, but with major changes to many of the units.
+    The guerrilla style warfare of the Raven Guard chapter is reflected by small, deadly but fragile infantry based
+    formations. The list is extremely flexible when it comes to deployment options. The <i>Expert Reconnaissance</i>
+    rule given to the Raven Guard Scouts allows for more accurate space drops and safer teleports. The list also has
+    access to air insertions using Storm Eagles, that replaces the standard Thunderhawk. The downside is that the list
+    lost access to all Space Marine support tanks and has to rely on alternative sources for firepower.
 </p>
 <p>
-    The guerrilla style warfare of the Raven Guard chapter is reflected by the small infantry based formations and the
-    unique special rules given to Raven Guard Scouts and the elite Sternguard and Vanguard formations. The list also
-    lost access to most armoured vehicles available to Codex Astartes, and has to rely on Land Speeders, Devastators and
-    Warhounds for firepower.
+    To make up for the loss of firepower the list has been given access to the Land Speeder Tempest, that carries
+    heavier armour and weapons compared to other Land Speeder variants. The Terminator formation also has the option to
+    take Cyclone Missile Launchers, trading assault capabilities for better shooting.
+</p>
+<p>
+    Both Sternguard and Vanguard formations has been kept from the NetEA original, but has undergone major changes. Both
+    units has been given the Eldar-inspired ability to move full speed during consolidation moves to represent the Raven
+    Guard ability of moving behind enemy lines with unrivalled stealth. Vanguards are close combat specialists with
+    Macro-weapons and Sternguards fire-fight specialists with <i>Sniper</i> firefight. Both formations also has the
+    <i>Lightning Charge</i> (first strike when the formation initiated an assault) special rule.
 </p>
 <p>
     The small but deadly formations of the Raven Guard can be used to great effect when controlling the flow of the
     battle. But when taking casualties they can quickly be reduced to a point where they can not threaten even the
-    weakest enemy formations. Make sure you have a plan for how to deal with large enemy formations, and consider adding
-    an upgrade here and there to boost formation sizes.
+    weakest enemy formations. The list can have a high activation count, but make sure you have a plan for how to deal
+    with large enemy formations, and consider adding an upgrade or two to boost formation sizes.
 </p>
