RG log correction

--- a/lists/SM/ravenguard.log.html
+++ b/lists/SM/ravenguard.log.html
@@ -14,7 +14,7 @@
 </p>
 <p>
     Both Sternguard and Vanguard formations has been kept from the NetEA original, but has undergone major changes. Both
-    units has been given the Eldar-inspired ability to move full speed during consolidation moves to represent the Raven
+    units have been given the Eldar-inspired ability to move full speed during consolidation moves to represent the Raven
     Guard ability of moving behind enemy lines with unrivalled stealth. Vanguards are close combat specialists with
     Macro-weapons and Sternguards fire-fight specialists with <i>Sniper</i> firefight. Both formations also has the
     <i>Lightning Charge</i> (first strike when the formation initiated an assault) special rule.
