--- a/lists/O/snakebiteclan.log.html
+++ b/lists/O/snakebiteclan.log.html
@@ -25,3 +25,6 @@
     Supa-Lobba. Both units have indirect fire weapons which can be powerful, but require you to take a sustained fire
     action which is a challenge for the Orks.
 </p>
+<p>
+    The Wyrdboy character has a slightly different function in the list. It is cheaper, but has shorter range. It also cannot be placed on War Engines, but must be allocated to an INF unit.
+</p>
