--- a/lists/IQ/adeptasororitas.log.html
+++ b/lists/IQ/adeptasororitas.log.html
@@ -3,7 +3,7 @@
     The EA:Ragnarök Adepta Sororitas list is based on the E-UK version of the list, but with some siginficant changes to force structure, stats and special rules.
 </p>
 <p>
-    Act of Faith: The Act of Faith rule has been revised succeed automatically, but only if the formation successfully carries out an Engage action. This makes this rule less abusable, in particular it prevents Fearless scouts from marching up and blocking off entire sections of the battlefield. In addition, formations that use the Act of Faith rule may ignore enemy formations when rallying, which encourages riskier engages and to stay with formations closer to the action.
+    Faithful: The Faithful rule has been revised succeed automatically, but only if the formation carries out an Engage action that leads to an Assault. This makes this rule less abusable, in particular it prevents Fearless scouts from marching up and blocking off entire sections of the battlefield. In addition, formations that use the Faithful rule counts as having a character with 'Inspiring' in the formation.
 </p>
 <p>
     The Exorcists have been split into two versions (one direct fire (Prioris) and one equipped with a Whirlwind Missile Launcher (Sanctorum)). The Exorcist Prioris have longer range but worse AT. It also have a 5+ Armour, since it is based on the Rhino.
