Necron and Space Marine changes

--- a/lists/SM/SM_race.log.html
+++ b/lists/SM/SM_race.log.html
@@ -22,6 +22,10 @@
     firefight value to 5+. In an attempt to see more Warounds used in pairs, rather than singles, we increased the
     discount by another 25 points when buying Warhound pairs.
 </p>
+<p>
+    In line with all other lists, the Orbital Support and Landing Craft formations have been moved to the 33% section, forcing some choices upon all Space Marine lists.
+    In addition, the Landing Craft has become 25 points cheaper.
+</p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
