Grotesques, DE Log

--- a/lists/DE/kabaloftheblackheart.log.html
+++ b/lists/DE/kabaloftheblackheart.log.html
@@ -3,6 +3,9 @@
     The EA:Ragnarök Dark Eldar, Kabal of the Black Heart list is based on the Epic UK version of the list. There are no major differences, but a number of smaller changes have been made.
 </p>
 <p>
+    The 'Fleet of Foot' special army rule now also grants Dark Eldar formations a +1 bonus when attempting a March action, to further encourage the use of this unique aspect of the army.
+</p>
+<p>
     The Syndicate core formation is more expensive, and has a compulsory Dracon character. This is because it felt a bit too obvious in the list, at the expense of the list's Partisan formations, which have generally been made slightly better over all.
 </p>
 <p>
