Updated army logs for the imperials

--- a/content/intro.html
+++ b/content/intro.html
@@ -49,9 +49,9 @@
         We have removed Thick Rear Armour from many Titans to force you to play them with a bit more care.
     </li>
     <li>
-        We have introduces the "God Machine" and "Split Fire" special rules for large (8+ DC) titans. God machine gives
-        blast markers to your opponents army if you kill his Titan, and Split Fire allows you to target more than one
-        formation under some circumstances.
+        We have introduces the <i>God Machine</i> and <i>Split Fire</i> special rules for large (8+ DC) titans. God
+        machine gives blast markers to your opponent's army if you kill or break his large Titan, and Split Fire allows
+        the Titan to target more than one formation under some circumstances.
     </li>
 </ul>
 <p>
