--- a/lists/SM/ravenguard.log.html
+++ b/lists/SM/ravenguard.log.html
@@ -13,11 +13,10 @@
     take Cyclone Missile Launchers, trading assault capabilities for better shooting.
 </p>
 <p>
-    Both Sternguard and Vanguard formations has been kept from the NetEA original, but has undergone major changes. Both
-    units have been given the Eldar-inspired ability to move full speed during consolidation moves to represent the Raven
-    Guard ability of moving behind enemy lines with unrivalled stealth. Vanguards are close combat specialists with
-    Macro-weapons and Sternguards fire-fight specialists with <i>Sniper</i> firefight. Both formations also has the
-    <i>Lightning Charge</i> (first strike when the formation initiated an assault) special rule.
+    Both Sternguard and Vanguard formations has been kept from the NetEA original, but has undergone major changes.
+    Vanguards are close combat specialists with Macro-weapons and Sternguards fire-fight specialists with <i>Sniper</i>
+    firefight. Both formations also has the <i>Lightning Charge</i> (first strike when the formation initiated an
+    assault) special rule.
 </p>
 <p>
     The small but deadly formations of the Raven Guard can be used to great effect when controlling the flow of the
